--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ img {
 }
 
 .head {
-  background-image: url("../img/th.jpeg");
+  background-image: url("../img/head.png");
   background-size: cover;
   background-position: center;
   border-radius: 50px;
